[package]
name = "necronomicon"
version = "0.1.1"
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.24.2", features = ["full"] }
mac_address = "1.1.4"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
local-ip-address = "0.5.1"
hostname = "0.3.1"
os_info = "3.5.1"
libp2p = { version = "0.50.0", features = ["full"] }
libp2p-kad = "0.42.1"
rand = "0.8.5"
